--- a/samples/config/prod/s-cluster/amster.yaml
+++ b/samples/config/prod/s-cluster/amster.yaml
@@ -5,7 +5,7 @@ image:
   pullPolicy: Always
   
 config:
-  importPath: /git/config/6.5/cdm/m-cluster/am
+  importPath: /git/config/6.5/default/am/empty-import
   exportPath: /tmp/amster
 
 ctsStores: ctsstore-0.ctsstore:1389,ctsstore-1.ctsstore:1389
