uat version with working am and amster

--- a/samples/config/prod/s-cluster/common.yaml
+++ b/samples/config/prod/s-cluster/common.yaml
@@ -3,7 +3,7 @@
 # for your DNS domain 
 
 #domain: freng.org
-domain: frk8s.net
+domain: test.net1
 
 # Install passwords.
 amadminPassword: password
